Fixing large font size for jumbotron on small devices

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -356,6 +356,9 @@ nav {
 
 /* Small devices (landscape phones, less than 768px)*/
 @media (max-width: 575.98px) {
+    .display-3 {
+        font-size: 2.5rem;
+    }
     .navbar-brand {
         font-size: large;
     }
